Svc-Deploy/httpd-deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  selector:
    matchLabels:
      app: httpd-app
  replicas: 4
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
      - name: httpd-app
        image: httpd:2.4
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
             path: /
             port: 80
            initialDelaySeconds: 10
            periodSeconds: 60
