Svc-Deploy/httpd-deployment-withsvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
spec:
  selector:
    matchLabels:
      app: httpd-app
  replicas: 4
  template:
    metadata:
      labels:
        app: httpd-app
    spec:
      containers:
      - name: httpd-app
        image: httpd:2.4
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
             path: /
             port: 80
            initialDelaySeconds: 10
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  labels:
    app: httpd-app
spec:
    type: NodePort
    selector:
       app: httpd-app
    ports:
      - port: 80
        targetPort: 80
