Svc-Deploy/httpd-svc-nodeport.yaml
apiVersion: v1
kind: Service 
metadata:
  name: httpd-svc
  labels: 
    app: httpd-app 
spec:
    type: NodePort    
    selector: 
       app: httpd-app 
    ports: 
      - port: 80
        targetPort: 80
